k8s/tikitaka-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikitaka
  labels: 
    app: tikitaka
spec:
  selector:
    app: tikitaka
  ports:
  - name: http
    port: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikitaka
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tikitaka
  template:
    metadata:
      labels:
        app: tikitaka
        version: v1
    spec:
      containers:
        - name: tikitaka
          image: greenteaclassic/tikitaka-prod
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
