k8s/tikitaka-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tikitaka-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tikitaka
spec:
  hosts:
  - "*"
  gateways:
  - tikitaka-gateway
  http:
  - route:
    - destination:
        host: tikitaka
    corsPolicy:
      allowOrigin:
        http://0.0.0.0:8080/
      allowMethods:
        - POST
        - GET
      allowCredentials: false
      maxAge: "24h"
